--- a/src/lib/Title/Title.scss
+++ b/src/lib/Title/Title.scss
@@ -1,10 +1,10 @@
-.Text {
+.Title {
     width: 100%;
     margin: 0;
-    @include fontText("md");
+    @include fontTitle("md");
 
     &--small {
-        @include fontText("sm");
+        @include fontTitle("sm");
     }
 
     &--bold {
