--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,10 +1,11 @@
 // MAIN COLORS
 $color-primary: rgb(44, 114, 199); // #2C72C7;
+$color-primary-dark: rgb(38, 94, 163); // #265EA3;
 $color-secondary: rgb(232, 90, 144); // #E85A90;
 
 // SUPPORT COLORS
 $color-light: rgb(255, 255, 255); // #FFFFFF
-// $color-grey-3: rgb(238, 238, 238);
+$color-grey-3: rgb(238, 238, 238); // #EEEEEE
 $color-grey-2: rgb(195, 195, 195); // #C3C3C3
 // $color-grey-1: rgb(0, 0, 0, 0.6);
 $color-dark: rgb(0, 0, 0); // #000000
