--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -21,3 +21,18 @@
   }
 
 }
+
+@mixin shadow($color, $size: "md") {
+
+  @if $size == "sm" {
+    box-shadow: 0 1px 2px $color-primary;
+  }
+
+  @if $size == "md" {
+    box-shadow: 0 3px 6px $color-primary;
+  }
+
+  @if $size == "lg" {
+    box-shadow: 0 5px 10px $color-primary;
+  }
+}
