feat: create Chip lib
* update dark text color

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -11,5 +11,5 @@ $color-grey-2: rgb(195, 195, 195); // #C3C3C3
 $color-dark: rgb(0, 0, 0); // #000000
 
 // TEXT COLORS
-$color-text-dark:rgb(60, 60, 60); // #3C3C3C;
+$color-text-dark:rgb(49, 49, 49); // #313131;
 $color-text-light: rgb(255, 255, 255); // #FFFFFF;
