--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -7,7 +7,7 @@ $color-secondary: rgb(232, 90, 144); // #E85A90;
 $color-light: rgb(255, 255, 255); // #FFFFFF
 $color-grey-3: rgb(238, 238, 238); // #EEEEEE
 $color-grey-2: rgb(195, 195, 195); // #C3C3C3
-// $color-grey-1: rgb(0, 0, 0, 0.6);
+$color-grey-1: rgb(152, 152, 152); // #989898
 $color-dark: rgb(0, 0, 0); // #000000
 
 // TEXT COLORS
