--- a/src/components/ShopCard/ShopCard.scss
+++ b/src/components/ShopCard/ShopCard.scss
@@ -1,6 +1,6 @@
 .ShopCard {
     width: 280px;
-    padding: 20px;
+    padding: spacing("lg");
     border-radius: 8px;
     @include shadow("md", $color-grey-1);
 
@@ -12,21 +12,21 @@
         display: flex;
         padding: 0;
         margin: 0;
-        margin-bottom: 8px;
+        margin-bottom: spacing("sm");
         list-style: none;
 
         > * {
-            margin-right: 4px;
+            margin-right: spacing("xs");
         }
     }
 
     &__contacts {
         margin: 0;
-        margin-top: 4px;
+        margin-top: spacing("xs");
         padding: 0;
 
         .Text:first-child {
-            margin-bottom: 4px;
+            margin-bottom: spacing("xs");
         }
     }
 }
