feat: create Modal story
* tests: update Modal tests to use screen
* apply border mixin through components
* update Modal types to receive Elements through content prop

--- a/src/components/ShopCard/ShopCard.scss
+++ b/src/components/ShopCard/ShopCard.scss
@@ -1,7 +1,7 @@
 .ShopCard {
     width: 280px;
     padding: spacing("lg");
-    border-radius: 8px;
+    @include border();
     @include shadow("md", $color-grey-1);
 
     &__bottom {
