--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -13,7 +13,7 @@
     }
 }
 
-@mixin border($size: "md", $color: rgba(255, 255, 255, 0)) {
+@mixin border($size: "sm", $color: rgba(255, 255, 255, 0)) {
   border-radius: 8px;
   border-style: solid;
   border-color: $color;
