--- a/src/lib/Button/Button.scss
+++ b/src/lib/Button/Button.scss
@@ -2,8 +2,7 @@
     width: 140px;
     height: 40px;
     background-color: $color-primary;
-    border: 2px solid $color-primary;
-    border-radius: 5px;
+    @include border("md", $color-primary);
     @include fontText("md");
     color: $color-text-light;
     font-weight: bold;
@@ -13,7 +12,7 @@
 
     &:hover {
         background-color: $color-primary-dark;
-        border: 2px solid $color-primary-dark;
+        @include border("md", $color-primary-dark);
     }
 
     &:active {
@@ -28,7 +27,7 @@
 
         &:hover {
             background-color: $color-grey-3;
-            border: 2px solid $color-primary-dark;
+            @include border("md", $color-primary-dark);
         }
     }
 }
