--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -14,4 +14,15 @@
         width: 40px;
         height: 20px;
     }
+
+    &__right {
+        display: flex;
+        align-items: center;
+    }
+
+    &__filters {
+        margin-right: spacing("xl");
+        cursor: pointer;
+        border-bottom: 1px dotted $color-dark;
+    }
 }
